# car-price-vision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: convnext_300k.yaml  default.yaml  effnet.yaml  smoke.yaml
docker/: train.Dockerfile
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_finetune.ipynb  04_interpretability.ipynb
results/ablation_300k/: ablation_holdout.json  ablation_test.json  summary.md
results/convnext/: eval_metrics.json  metrics.csv
results/convnext_300k/: eval_metrics.json  metrics.csv
results/effnet/: eval_metrics.json  metrics.csv
scripts/: ablation_logo_mask.py  build_manifest.py  export_onnx.py  inventory_rtx.sh
serving/: Dockerfile  app.py  currency.py  requirements.txt
serving/deploy/: .env.example  .gitignore  README.md  docker-compose.yml
serving/static/: index.html
serving/static/gallery/: gallery.json
src/car_price_vision/: __init__.py  eval.py  losses.py  metrics.py  train.py  utils.py
src/car_price_vision/data/: __init__.py  dataset.py  splits.py  transforms.py
src/car_price_vision/interpret/: __init__.py  gradcam.py
src/car_price_vision/models/: __init__.py  backbone.py  heads.py  multitask.py
tests/: conftest.py  test_advert_facts.py  test_metrics.py  test_serving_page_extract.py  test_serving_url_safety.py  test_splits.py  test_target_norm.py  test_transforms.py
