[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car_price_vision"
version = "0.1.0"
description = "Multi-task computer vision: predict a car's manufacture year and price from a single photo, with Grad-CAM interpretability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vadym" }]

dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
serving = ["fastapi>=0.104", "uvicorn>=0.24", "onnx>=1.15", "onnxruntime>=1.16"]
notebooks = ["jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
